fix minor typo in notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -34,7 +34,7 @@
     "dbHost = os.environ['MYSQL_HOST']\n",
     "dbSchema = os.environ['MYSQL_SCHEMA']\n",
     "\n",
-    "print(f'mysql+pymysql://{dbUser}:{dbPass}@{dbHost}/{dbSchema}?charset=utf8mb4')",
+    "print(f'mysql+pymysql://{dbUser}:{dbPass}@{dbHost}/{dbSchema}?charset=utf8mb4')\n",
     "engine = create_engine(f'mysql+pymysql://{dbUser}:{dbPass}@{dbHost}/{dbSchema}?charset=utf8mb4')\n",
     "\n",
     "with engine.connect() as conn:\n",
